feat: add target PID command-line input support for tracing and update dependencies

--- a/io-trace/Cargo.toml
+++ b/io-trace/Cargo.toml
@@ -11,6 +11,7 @@ io-trace-common = { path = "../io-trace-common", features = ["user"] }
 anyhow = { workspace = true, default-features = true }
 aya = { workspace = true }
 aya-log = { workspace = true }
+clap = { workspace = true, features = ["derive", "help", "usage", "error-context"] }
 env_logger = { workspace = true }
 libc = { workspace = true }
 log = { workspace = true }
